# django_estate_agent

./: .gitignore  README.md  pyproject.toml
estate_agent/: manage.py
estate_agent/estate_agent/: asgi.py  forms.py  map.py  models.py  settings.py  urls.py  views.py  wsgi.py
estate_agent/estate_agent/helpers/: __init__.py  pagination_builder.py  validators.py
estate_agent/estate_agent/migrations/: 0001_initial.py  0002_property_image.py  0003_alter_property_image.py  0004_remove_property_image_propertyimage.py  0005_alter_propertyimage_image.py  0006_alter_propertyimage_image.py  0007_alter_propertyimage_property.py  0008_alter_propertyimage_image.py  0009_property_annual_service_charge_property_bathrooms_and_more.py  0010_alter_propertycoordinates_property.py  0010_propertycoordinates.py  0011_remove_propertycoordinates_coordinates_and_more.py
estate_agent/estate_agent/models/: __init__.py  property.py  property_coordinates.py  property_floorplan.py  property_image.py
estate_agent/estate_agent/pagination/: MapIndexPagination.py  __init__.py
estate_agent/estate_agent/serializers/: __init__.py  properties_serializer.py  (+4 more)
estate_agent/templates/: for_rent_index.html  for_sale_index.html  index.html  login_portal.html  property_detail.html  property_form.html  property_index.html  register_user.html
estate_agent/utils/: __init__.py  enums.py  strings.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  output.css
frontend/src/: App.tsx  config.tsx  index.css  index.tsx
(+48 files in other folders)
