[tool.poetry]
name = "django_estate_agent"
version = "0.1.0"
description = ""
authors = ["SvenMC <svencooke7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.3"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
